# Dictation-HUD

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  test-apis.mjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: test-providers.mjs
src/: main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hotkey.rs  lib.rs  main.rs  paste.rs  prompt.rs  stt.rs  symbols.rs
src/components/: Badge.tsx  KeyRecorder.tsx  Switch.tsx  Waveform.tsx
src/lib/: audio.ts  deepgram.ts  elevenlabs.ts  hotkey.ts  log.ts  refine.ts
src/styles/: globals.css
src/windows/: Hud.tsx  Settings.tsx
